# aoc2024

./: .gitignore  CMakeLists.txt  aoc.h  build.sh  build_all.sh  run_all_clang.sh  run_all_gnu.sh
01/: main.cpp
02/: main.cpp
03/: main.cpp
04/: main.cpp
05/: main.cpp
06/: main.cpp
07/: main.cpp
08/: main.cpp
09/: main.cpp
10/: main.cpp
11/: main.cpp
12/: main.cpp
13/: main.cpp
14/: main.cpp
15/: main.cpp
16/: main.cpp  main4.cpp
17/: main.cpp
18/: main.cpp
19/: main.cpp
20/: main.cpp
21/: main.cpp
22/: main.cpp
24/: main.cpp
